--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
             <span class="primaryspan">Saint-Remy-de-Provence & surroundings, Provence, France</span>
            <a href="#" class="primarya">view more photos </a>
         </div>
-
+    </div>
+    <div class="section-one">
+        <div class="feature-text">
+            <span class="feature">• 16 guests</span>
+            <span class="feature">• 8 bedroom</span>
+            <span class="feature">• 9 bathrooms</span>
+            <span class="feature">• 1200 sqm</span>
+        </div>
     </div>
     
 
