--- a/index.html
+++ b/index.html
@@ -52,6 +52,50 @@
             <span class="feature">• 1200 sqm</span>
         </div>
     </div>
+    <div class="section-two">
+        <div class="activities1">
+
+            <div class="activity">
+                <img src="pics/golf-field.png" class="activityimg">
+                <span class="activity-span">Activities</span>
+            </div>
+
+            <div class="activity">
+                <img src="pics/restaurant.png" class="activityimg">
+                <span class="activity-span">Restaurants</span>
+            </div>
+
+            <div class="activity">
+                <img src="pics/electric-car.png" class="activityimg">
+                <span class="activity-span">Transportations</span>
+            </div>
+
+        </div>
+        <div class="activities2">
+
+            <div class="activity">
+                <img src="pics/serving-dish.png" class="activityimg">
+                <span class="activity-span">Facilities</span>
+            </div>
+
+            <div class="activity">
+                <img src="pics/spa.png" class="activityimg">
+                <span class="activity-span">Spa</span>
+            </div>
+
+            <div class="activity">
+                <img src="pics/wedding-rings.png" class="activityimg">
+                <span class="activity-span">Weddings</span>
+            </div>
+
+        </div>
+        <div class="activitiesp">
+            <span>A house carefully curated and inspected. An entirely
+                tailor-made holiday. An excellence of service always guaranteed by our 
+                on-site team.
+            </span>
+        </div>
+    </div>
     
 
 
