--- a/index.html
+++ b/index.html
@@ -96,6 +96,59 @@
             </span>
         </div>
     </div>
+    <div class="rooms">
+        <div class="rooms-title">
+            <h3>ROOMS</h3>
+        </div>
+        <div class="kitchens">
+            <div class="room-kitchen">
+                <span>KITCHEN</span>
+                <p>Professional kitchen</p>
+                <p>Dishwasher</p>
+                <p>Microwave</p>
+                <p>Kettle</p>
+                <p>Coffee machine</p>
+                <p>Bar</p>
+            </div>
+
+            <div class="room-kitchen">
+                <span>KITCHEN 2</span>
+                <p>Professional kitchen</p>
+                <p>Dishwasher</p>
+                <p>Microwave</p>
+                <p>Kettle</p>
+                <p>Coffee machine</p>
+                <p>Bar</p>
+            </div>
+
+            <div class="room-kitchen">
+                <span>LIVING ROOM</span>
+                <p>Bookshelf</p>
+                <p>2 sofas</p>
+                <p>Armchair</p>
+                <p>Flat screen tv</p>
+                <p>Bar</p>
+                <p>Fireplace</p>
+            </div>
+        </div>
+
+        <div class="kitchens2">
+            <div class="room-kitchen2">
+                <span>LIVING ROOM2</span>
+                <p>4 armchairs</p>
+            </div>
+            <div class="room-kitchen2">
+                <span>DINING ROOM</span>
+                <p>14 seats</p>
+            </div>
+            <div class="room-kitchen2">
+                <span>DINING ROOM 2</span>
+                <p>16 seats</p>
+            </div>
+
+            
+        </div>
+    </div>
     
 
 
