--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=GFS+Didot&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link href="https://fonts.cdnfonts.com/css/boowie" rel="stylesheet">
+<link rel="preload" href="pics/inter1.jpg" as="image">
+<link rel="preload" href="pics/inter2.jpg" as="image">
+<link rel="preload" href="pics/inter3.jpg" as="image">
+<link rel="preload" href="pics/inter4.jpg" as="image">
+<link rel="preload" href="pics/inter5.jpg" as="image">
 </head>
 <body>
     <nav class="navbar">
@@ -150,7 +155,29 @@
         </div>
     </div>
     
+    <div class="locations">
+        <a href="#">LOCATIONS</a>
+    </div>
 
+
+    <div class="slider-section">
+
+
+        <div class="slider">
+            <div class="slides">
+                <img src="pics/inter1.jpg"class="sliderimg">
+                <img src="pics/inter2.jpg"class="sliderimg">
+                <img src="pics/inter3.jpg"class="sliderimg">
+                <img src="pics/inter4.jpg"class="sliderimg">
+                <img src="pics/inter5.jpg"class="sliderimg">
+            </div>
+            <img src="pics/prev.png" class="prev" onclick="prevSlide()">
+            <img src="pics/slidercont.png" class="next" onclick="nextSlide()">
+        </div>
+
+
+
+    </div>
 
 
 
