--- a/index.html
+++ b/index.html
@@ -180,7 +180,65 @@
     </div>
 
 
+    <footer>
+        <div class="footer-container">
+            
+            <div class="footer1">
+                <span>Liz © 2024 All rights reserved</span>
+            </div>
 
+            <div class="footer2">
+                <span>DISCOVER</span>
+                <a href="#">Our mission</a>
+                <a href="#">Your tailor made holiday</a>
+                <a href="#">How we choose our houses</a>
+                <a href="#">What makes us unique</a>
+                <a href="#">Get inspired</a>
+            </div>
+
+            <div class="footer3">
+                <span>GET INFORMED</span>
+                <a href="#">Careers</a>
+                <a href="#">Privacy policy</a>
+                <a href="#">Villagio club</a>
+                <a href="#">Terms of use</a>
+                <a href="#">FAQ</a>
+            </div>
+
+            <div class="footer4">
+                <span class="spanheading">SIGN UP FOR THE NEWSLETTER</span>
+                <span class="spandescription">Subscribe to our newsletter to get curated
+                    travel inspirations.
+                </span>
+                <div class="inputcontainer">
+                    <form id="email-form">
+                        <div class="inputcontainer">
+                            <input type="text" placeholder="E-MAIL" name="email">
+                            <button type="submit" class="inputbtn">SEND</button>
+                        </div>
+                    </form>
+            
+
+            </div>
+        </div>
+    </footer>
+
+
+
+
+
+
+
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "yS2bsPWQQnpxgtMBL",
+      });
+   })();
+</script>
     <script src="app.js"></script>
 </body>
 </html>
