--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     travel inspirations.
                 </span>
                 <div class="inputcontainer">
-                    <form id="email-form">
+                    <form >
                         <div class="inputcontainer">
                             <input type="text" placeholder="E-MAIL" name="email">
                             <button type="submit" class="inputbtn">SEND</button>
